add getClient to CRM/DM + Test
